--- a/docs/master-branch/component/examples/dealer.html
+++ b/docs/master-branch/component/examples/dealer.html
@@ -113,7 +113,7 @@
 
                     </code>
                   </pre>
-                  <p class="mt-5">Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>                  
+                  <p class="mt-5">Copy the code above and replace the same element it in the <a href="/corporate-ui-docs/master-branch/template/basic-template-app.html" download="">basic template for applications</a> or the <a href="/corporate-ui-docs/master-branch/template/basic-template.html" download="">basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>                  
                 </div>
                 <div id="page-code" class="tab-pane fade">
                   <div class="page-header">
@@ -180,7 +180,7 @@
                   </pre>
                 </div>
 
-            <p class="mt-5">To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/">UX Library</a> and the <a href="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap HTML Collection</a></p>.
+            <p class="mt-5">To build your application, please use the appropriate elements from the <a href="/corporate-ui-docs/master-branch/">UX Library</a> and the <a href="/corporate-ui-docs/master-branch/developer/bootstrap-original-docs.html">Scania Bootstrap HTML Collection</a></p>.
 
       </div>
     </section>
@@ -214,7 +214,7 @@
         // vm.siteName = 'Stockholm';      
         vm.topLinkName = 'Sample Link'; 
         vm.topLinkHref = 'https://configurator.scania.com/index.aspx?etel_market=5141&etel_language=5237';
-        vm.dealerLogo = 'https://scania.github.io/corporate-ui-docs/component/examples/bilmetro-logo.png';
+        vm.dealerLogo = 'https://scania.github.io/corporate-ui-docs/master-branch/component/examples/bilmetro-logo.png';
         vm.dealerUrl = 'https://www.scania.com/se/sv/bilmetro';
         vm.appInput = appInput;
 
