--- a/docs/master-branch/component/inline-editor/inline-editor.html
+++ b/docs/master-branch/component/inline-editor/inline-editor.html
@@ -12,12 +12,12 @@
 	<script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
          
 
@@ -76,13 +76,13 @@
 
 	</style>
 
-  	<link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+  	<link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 
 </head>
 <body class="scania ux-lib" data-env="Test">
 
 
-	<c-corporate-header site-name="Edit document" site-url="/corporate-ui-docs/">
+	<c-corporate-header site-name="Edit document" site-url="/corporate-ui-docs/master-branch/">
 		<nav-item location="#" class="spinner">Save</nav-item>
 		<nav-item location="start.html" class="exit">Exit</nav-item>
 	</c-corporate-header>
@@ -171,7 +171,7 @@
 
 
 
-  		<script src="/corporate-ui-docs/ux-lib.js"></script>
+  		<script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 	</body>
 	</html>
 
