--- a/docs/master-branch/template/index.html
+++ b/docs/master-branch/template/index.html
@@ -12,13 +12,13 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
 
 
   <link rel="import" href="https://static.scania.com/build/global/2.5.0/html/component/Navigation/main-hero/main-hero.html">
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 
     <style>
       .templates-iframe iframe {
@@ -32,8 +32,8 @@
 </head>
 <body unresolved class="scania ux-lib documentation">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
@@ -41,20 +41,20 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/" class="active">
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/">Style Guide</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">
           Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/component/">Available Components</nav-item>
-            <nav-item location="/corporate-ui-docs/template/" class="active">Templates</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/uiaas.html">UIaaS</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/component/">Available Components</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/template/" class="active">Templates</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/uiaas.html">UIaaS</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>        
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>        
       </primary-items>
     </c-main-navigation>
 
@@ -70,7 +70,7 @@
 
   <c-corporate-footer></c-corporate-footer>
 
-  <script src="/corporate-ui-docs/ux-lib.js"></script>
+  <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
  
 </body>
 </html>
