--- a/docs/master-branch/template/main-hero.htm
+++ b/docs/master-branch/template/main-hero.htm
@@ -11,7 +11,7 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
 
 
@@ -20,8 +20,8 @@
 </head>
 <body unresolved class="scania ux-lib">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
