--- a/docs/master-branch/component/component.html
+++ b/docs/master-branch/component/component.html
@@ -16,7 +16,7 @@
     <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
     <link rel="import" href="scania-doc/scania-doc.html">
 
-    <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+    <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">     
 
@@ -88,26 +88,26 @@
   </head>
   <body class="scania app ux-lib" data-env="Test">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
   
   <c-main-content>
     <c-main-navigation>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
-            <nav-item location="/corporate-ui-docs/component/index.html">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/master-branch/component/index.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
       <secondary-items>
         <nav-item>
@@ -119,7 +119,7 @@
       <section class="light">
         <div class="container-fluid app">
           <ul class="nav nav-tabs">
-            <li><a href="/corporate-ui-docs/component/" class="back"><i class="icon-angle-left"></i> Back</a></li>
+            <li><a href="/corporate-ui-docs/master-branch/component/" class="back"><i class="icon-angle-left"></i> Back</a></li>
             <li class="active"><a data-toggle="tab" href="#example">Example</a></li>
             <li><a data-toggle="tab" href="#usage">About</a></li>
             <li><a data-toggle="tab" href="#html-code">Code</a></li>                  
@@ -146,7 +146,7 @@
             <div id="html-code" class="tab-pane fade app">
               <h2>Code Sample</h2>
               <div class="jQueryAppendToContainer"></div>
-              <p>Copy the code and paste it in your <a href="/corporate-ui-docs/template/basic-template-app.html" download>basic template for applications</a> or the <a href="/corporate-ui-docs/template/basic-template.html" download>this basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
+              <p>Copy the code and paste it in your <a href="/corporate-ui-docs/master-branch/template/basic-template-app.html" download>basic template for applications</a> or the <a href="/corporate-ui-docs/master-branch/template/basic-template.html" download>this basic template for public sites</a>. Depending on what template you're using, the component will get different styling applied to it.</p>
             </div>
 
           </div>
@@ -176,7 +176,7 @@
     </script>
 
     <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/ux-library.js"></script>
-    <script src="/corporate-ui-docs/ux-lib.js"></script>   
+    <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>   
 
     <link rel="stylesheet"
         href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
