--- a/docs/master-branch/component/index.html
+++ b/docs/master-branch/component/index.html
@@ -16,30 +16,30 @@
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
   <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/css/ux-library.css">
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">  
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">  
 </head>
 <body class="scania ux-lib" ng-controller="UxLib as uxlib">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
   
   <c-main-content>
     <c-main-navigation>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
-            <nav-item location="/corporate-ui-docs/component/index.html" class="active">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/">Corporate UI</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/scania-bootstrap.html">Scania Bootstrap</nav-item>            
+            <nav-item location="/corporate-ui-docs/master-branch/component/index.html" class="active">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
           </sub-navigation>
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
 
@@ -81,6 +81,6 @@
   </script>
 
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/ux-library.js"></script>
-  <script src="/corporate-ui-docs/ux-lib.js"></script>      
+  <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>      
 </body>
 </html>
