--- a/docs/master-branch/template/advanced-tables/table-basic-template.html
+++ b/docs/master-branch/template/advanced-tables/table-basic-template.html
@@ -14,7 +14,7 @@
 
 <body class="scania app ux-lib" data-env="Test" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -155,6 +155,6 @@
     </div>
   </section>  
 </c-main-content>
-<script src="/corporate-ui-docs/ux-lib.js"></script>
+<script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 </body>
 </html>
