--- a/docs/master-branch/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/master-branch/template/advanced-tables/table-column-selector-widget.html
@@ -164,7 +164,7 @@
 </head>
 <body class="scania app ux-lib" data-env="Test" data-env="proto">
 
-	<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+	<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
 		<nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
 		<nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 	</c-corporate-header>
@@ -252,7 +252,7 @@
 				</div>
 			</main-content>
 
-  <script src="/corporate-ui-docs/ux-lib.js"></script>
+  <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 
 </body>
 </html>
