--- a/docs/master-branch/template/advanced-tables/table-filtered-app.html
+++ b/docs/master-branch/template/advanced-tables/table-filtered-app.html
@@ -53,12 +53,12 @@
 	</style>    
 
 
-<link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+<link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 </head>
 
 <body class="scania app ux-lib" data-env="Test" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -171,7 +171,7 @@
 		</div>
 	</c-main-content>
 
-	<script src="/corporate-ui-docs/ux-lib.js"></script>
+	<script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 
 </body>
 </html>
