--- a/docs/master-branch/template/advanced-tables/table-tree-view.html
+++ b/docs/master-branch/template/advanced-tables/table-tree-view.html
@@ -20,11 +20,11 @@
 
   <link rel="stylesheet" href="https://static.scania.com/vendors/components/jQuery/hColumns/css/hcolumns.css" type="text/css">
 
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 </head>
 <body class="scania ux-lib" data-env="Test" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
+<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
@@ -136,6 +136,6 @@
       </div>
     </section>
   </c-main-content>
-  <script src="/corporate-ui-docs/ux-lib.js"></script>
+  <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 </body>
 </html>
