--- a/docs/master-branch/template/basic-template-app.html
+++ b/docs/master-branch/template/basic-template-app.html
@@ -15,7 +15,7 @@
 
 <body class="scania app ux-lib" data-env="Test">
 
-	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/">
+	<c-corporate-header site-name="My New Application" site-url="/corporate-ui-docs/master-branch/">
 		<nav-item location="https://www.scania.com">Sample Link</nav-item>
 	</c-corporate-header>
 
@@ -24,12 +24,12 @@
 		<c-main-navigation>
 			<primary-items>
 				<nav-item location="https://www.scania.com/ux-library">Home</nav-item>
-				<nav-item location="https://scania.github.io/corporate-ui-docs/developer/" class="active">Web Applications
+				<nav-item location="https://scania.github.io/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
 					<sub-navigation caption="Templates">
-						<nav-item location="https://scania.github.io/corporate-ui-docs/template/basic-template-app.html" class="active">Application Template</nav-item>
-						<nav-item location="https://scania.github.io/corporate-ui-docs/template/basic-template.html">Public site Template</nav-item>
-						<nav-item location="https://scania.github.io/corporate-ui-docs/template/angular-basic-template.html">Angular Template</nav-item>
-						<nav-item location="https://scania.github.io/corporate-ui-docs/developer/extended-tables.html">Tables Demos</nav-item>			
+						<nav-item location="https://scania.github.io/corporate-ui-docs/master-branch/template/basic-template-app.html" class="active">Application Template</nav-item>
+						<nav-item location="https://scania.github.io/corporate-ui-docs/master-branch/template/basic-template.html">Public site Template</nav-item>
+						<nav-item location="https://scania.github.io/corporate-ui-docs/master-branch/template/angular-basic-template.html">Angular Template</nav-item>
+						<nav-item location="https://scania.github.io/corporate-ui-docs/master-branch/developer/extended-tables.html">Tables Demos</nav-item>			
 					</sub-navigation>
 				</nav-item>
 			</primary-items>
