--- a/docs/master-branch/template/charts-samples.html
+++ b/docs/master-branch/template/charts-samples.html
@@ -11,19 +11,19 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
 
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
   <style type="text/css">    
     .scania.bootstrap h1 {text-align: center; margin-top: 40px}    
     .scania.bootstrap p {text-align: center;margin:20px 15% 40px;}    
   </style>
-  <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">
+  <link rel="stylesheet" href="/corporate-ui-docs/master-branch/ux-lib.css">
 </head>
 <body unresolved class="scania">  
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
@@ -31,17 +31,17 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/" class="active">Style Guide
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/" class="active">Style Guide
           <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui-docs/colours/" class="active">Colours</nav-item>
-            <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/logotype/">Logotype</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/icons/">Icons</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/colours/" class="active">Colours</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/typography/">Typography</nav-item>
           </sub-navigation>
         </nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/">Web Applications</nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/developer/">Web Applications</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
     
