--- a/docs/master-branch/template/html-copy-paste/html-copy-paste.html
+++ b/docs/master-branch/template/html-copy-paste/html-copy-paste.html
@@ -9,15 +9,15 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
 
 </head>
 
 <body class="scania ux-lib" data-env="Test">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
@@ -25,17 +25,17 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
-            <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
-            <nav-item location="/corporate-ui-docs/template/html-copy-paste/html-copy-paste.html" class="active">HTML Copy Paste</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/bootstrap-original-docs.html">Bootstrap Documentation</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/template/html-copy-paste/html-copy-paste.html" class="active">HTML Copy Paste</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
       </primary-items>
     </c-main-navigation>
 
@@ -44,7 +44,7 @@
 
 
 
-      <link rel="import" href="https://scania.github.io/corporate-ui-docs/template/html-copy-paste/c-html-copy-paste.html">
+      <link rel="import" href="https://scania.github.io/corporate-ui-docs/master-branch/template/html-copy-paste/c-html-copy-paste.html">
 
       <c-html-copy-paste fullbleed></c-html-copy-paste> 
 
