--- a/docs/master-branch/template/html-template.html
+++ b/docs/master-branch/template/html-template.html
@@ -15,8 +15,8 @@
 
 <body class="scania app ux-lib" data-env="Test">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
   
@@ -24,16 +24,16 @@
 
     <c-main-navigation show-search>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/master-branch/">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/styleguide/">Style Guide</nav-item>            
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
           <sub-navigation caption="Scania Bootstrap">
             <nav-item location="../developer/scania-bootstrap-app.html">Bootstrap CSS for Applications</nav-item>
             <nav-item location="../developer/scania-bootstrap-public.html">Bootstrap Public CSS</nav-item>  
             <nav-item location="html-template.html" class="active">Cut and Paste HTML</nav-item>
           </sub-navigation>  
         </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/mobile-apps/">Mobile Apps</nav-item>
       </primary-items>
     </c-main-navigation>
 
@@ -319,7 +319,7 @@
             <div class="col-md-6">  
               <div class="panel panel-default">
                 <div class="panel-body">
-                  <h3><a href="https://scania.github.io/corporate-ui-docs/icons/">Scania Icons available in positive and negative colors</a> </h3>
+                  <h3><a href="https://scania.github.io/corporate-ui-docs/master-branch/icons/">Scania Icons available in positive and negative colors</a> </h3>
                   <span><i class="scania-icon-social-media-twitter md"></i></span>
                   <span><i class="scania-icon-service_exchange md"></i></span>
                   <span><i class="scania-icon-no-photo md"></i></span>
@@ -331,7 +331,7 @@
                   <span><i class="scania-icon-connected-services-bus md"></i></span>
                   <span><i class="scania-icon-info-round md"></i></span>
                   <span><i class="scania-icon-call-us md"></i></span>
-                  <span><a href="https://scania.github.io/corporate-ui-docs/icons/"><i class="scania-icon-link md"></i></a> </span>
+                  <span><a href="https://scania.github.io/corporate-ui-docs/master-branch/icons/"><i class="scania-icon-link md"></i></a> </span>
                 </div>  
               </div>
             </div>             
