--- a/docs/master-branch/template/light-examples.html
+++ b/docs/master-branch/template/light-examples.html
@@ -28,8 +28,8 @@
 </head>
 <body class="scania ux-lib app" data-env="Test">
 
-  <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
@@ -335,6 +335,6 @@
     </section>
 
   </c-main-content>
-   <script src="/corporate-ui-docs/ux-lib.js"></script>
+   <script src="/corporate-ui-docs/master-branch/ux-lib.js"></script>
 </body>
 </html>
