--- a/docs/master-branch/template/starter-kit/index.html
+++ b/docs/master-branch/template/starter-kit/index.html
@@ -16,7 +16,7 @@
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
+  <script src="/corporate-ui-docs/master-branch/js/google-analytics.js"></script>  
 
 
 
@@ -29,8 +29,8 @@
 
   <!-- The header main menu and footer we hope are quite self explainatory :-) --> 
     
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-    <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
+  <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+    <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
     
@@ -39,17 +39,17 @@
 
     <c-main-navigation>
       <primary-items>
-        <nav-item location="/corporate-ui-docs/index.html">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/logotype/">Logotype</nav-item>
-        <nav-item location="/corporate-ui-docs/icons/">Icons</nav-item>
-        <nav-item location="/corporate-ui-docs/typography/">Typography</nav-item>
-        <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
+        <nav-item location="/corporate-ui-docs/master-branch/index.html">Home</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/logotype/">Logotype</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/icons/">Icons</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/typography/">Typography</nav-item>
+        <nav-item location="/corporate-ui-docs/master-branch/developer/" class="active">Web Applications
           <sub-navigation caption="Web Applications">
-            <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>          
-            <nav-item location="/corporate-ui-docs/component/">Available Components</nav-item>
-            <nav-item location="/corporate-ui-docs/template/">Templates</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/caching.html">Caching stategies</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/support.html">Request support</nav-item>            
+            <nav-item location="/corporate-ui-docs/master-branch/developer/">Corporate UI</nav-item>          
+            <nav-item location="/corporate-ui-docs/master-branch/component/">Available Components</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/template/">Templates</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/caching.html">Caching stategies</nav-item>
+            <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Request support</nav-item>            
           </sub-navigation>
         </nav-item>
       </primary-items>
