--- a/docs/ux-lib.css
+++ b/docs/ux-lib.css
@@ -4,6 +4,17 @@
    font-weight: bold;
 }
 
+body[data-env]:before {
+    background-color: #ddd;
+    padding: 80px 80px 0;
+    text-transform: uppercase;
+    font-size: 25px;
+    border: 2px solid #dadada;
+    font-family: 'Scania Sans Condensed Bold';
+    background-color: #D6001C;
+    color: #dadada;
+}
+
 
 /* Coming in > 3.2.0  */
 /*.btn + .btn {
