Renamed to Master Branch

--- a/docs/master-branch/component/examples/Bootstrap/forms.html
+++ b/docs/master-branch/component/examples/Bootstrap/forms.html
@@ -18,7 +18,7 @@
 </script>
 </head>
   <body class="scania app ux-lib" data-env="Test">
-    <c-corporate-header site-name="UX Library" site-url="https://static.scania.com/ux-library/">
+    <c-corporate-header site-name="Master Branch" site-url="https://static.scania.com/ux-library/">
       <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
       <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
     </c-corporate-header>
