--- a/docs/master-branch/template/advanced-tables/table-pagination.html
+++ b/docs/master-branch/template/advanced-tables/table-pagination.html
@@ -56,7 +56,7 @@
 </head>
 <body class="scania app ux-lib" data-env="Test" data-env="proto">
 
-<c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/master-branch/">
+<c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
 </c-corporate-header>
