--- a/docs/master-branch/template/angular-basic-template.html
+++ b/docs/master-branch/template/angular-basic-template.html
@@ -58,7 +58,7 @@
 
 <body class="scania app ux-lib" data-env="Test" ng-controller="ThisSite as thissite">
 
-  <c-corporate-header site-name="UX Library" site-url="/corporate-ui/">
+  <c-corporate-header site-name="Master Branch" site-url="/corporate-ui/">
     <nav-item location="/corporate-ui/">UX Library</nav-item>
   </c-corporate-header>
     
