--- a/docs/master-branch/component/examples/article.html
+++ b/docs/master-branch/component/examples/article.html
@@ -16,7 +16,7 @@
 </head>
 <body class="scania ux-lib">
 
-  <c-corporate-header site-name="UX Library" site-url="/">
+  <c-corporate-header site-name="Master Branch" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
   </c-corporate-header>
