--- a/docs/master-branch/component/examples/sidenav.html
+++ b/docs/master-branch/component/examples/sidenav.html
@@ -48,7 +48,7 @@
   </style>
 </head>
 <body class="scania ux-lib app" data-env="Test" ng-app="App">
-  <c-corporate-header site-name="UX Library" site-url="/">
+  <c-corporate-header site-name="Master Branch" site-url="/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
   </c-corporate-header>
