--- a/docs/master-branch/component/examples/starter-kit/new-component/index.html
+++ b/docs/master-branch/component/examples/starter-kit/new-component/index.html
@@ -21,7 +21,7 @@
 
   <!-- The header main menu and footer we hope are quite self explainatory :-) --> 
     
-  <c-corporate-header site-name="UX Library" site-url="https://static.scania.com/ux-library/">
+  <c-corporate-header site-name="Master Branch" site-url="https://static.scania.com/ux-library/">
     <nav-item location="https://www.scania.com/world/#/">World Entry</nav-item>
     <nav-item location="https://www.scania.com/group/en/">Scania Group</nav-item>
   </c-corporate-header>
