--- a/docs/master-branch/component/examples/dynamic-navigation-load.html
+++ b/docs/master-branch/component/examples/dynamic-navigation-load.html
@@ -44,7 +44,7 @@
     }
   </style>
 </head>
-<body class="scania ux-lib fmp app">
+<body class="scania app fmp" data-env="Test">
 
   <c-corporate-header site-name="Developers" site-url="/">
     <nav-item location="https://github.scania.com/pages/Scania/ux-library/">UX Library</nav-item>
