--- a/docs/master-branch/component/examples/Bootstrap/panels.html
+++ b/docs/master-branch/component/examples/Bootstrap/panels.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Panels</title>
   </head>
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
   <body class="Scania app">
     <c-corporate-header site-name="Panel" site-url="#">
       <nav-item location="#">panel</nav-item>
