--- a/docs/master-branch/component/examples/Bootstrap/table.html
+++ b/docs/master-branch/component/examples/Bootstrap/table.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Test page for elements</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
    <!-- Table Sorter Plugin -->
   <!-- <script src="https://static.scania.com/vendors/frameworks/jquery/1.11.3/jquery-1.11.3.min.js"></script> -->
