--- a/docs/master-branch/component/examples/bootstrap.html
+++ b/docs/master-branch/component/examples/bootstrap.html
@@ -14,7 +14,7 @@
     <link href="respond.proxy.gif" id="respond_redirect" rel="respond_redirect" />
     <script src="respond.proxy.js"></script>
     <![endif]-->
-    <script src="../../../js/corporate-ui.js"></script>
+    <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
   </head>
   <body unresolved class="scania bootstrap">
     <div class="row hidden">
