--- a/docs/master-branch/component/examples/c-dashboard.html
+++ b/docs/master-branch/component/examples/c-dashboard.html
@@ -10,7 +10,7 @@
 
   <title>UX Library</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <link rel="import" href="../../../html/component/Listing Components/dashboard/dashboard.html">
 </head>
