--- a/docs/master-branch/component/examples/data-interaction.html
+++ b/docs/master-branch/component/examples/data-interaction.html
@@ -11,7 +11,7 @@
 
   <title>Dashboard</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <style>
     label {
