--- a/docs/master-branch/component/examples/light-dashboard.html
+++ b/docs/master-branch/component/examples/light-dashboard.html
@@ -11,7 +11,7 @@
 
   <title>UX Library</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
 </head>
 <body class="scania ux-lib app" data-env="Test">
