--- a/docs/master-branch/component/examples/login.html
+++ b/docs/master-branch/component/examples/login.html
@@ -11,7 +11,7 @@
 
   <title>Login</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <script>
     document.addEventListener('login', Login, false);
