--- a/docs/master-branch/component/examples/no-main.html
+++ b/docs/master-branch/component/examples/no-main.html
@@ -11,10 +11,10 @@
 
   <title>UX Library</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
 </head>
-<body class="scania ux-lib">
+<body class="scania ux-lib" data-env="Test">
 
   <span>text 1</span>
   <span>text 2</span>
