--- a/docs/master-branch/component/examples/sidenav.html
+++ b/docs/master-branch/component/examples/sidenav.html
@@ -9,7 +9,7 @@
 
   <title>UX Library</title>
 
-  <script src="../../../js/corporate-ui.js"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
 
   <style>
     /* Should be added to Corporate */
