--- a/docs/master-branch/component/index.html
+++ b/docs/master-branch/component/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/css/ux-library.css">
   <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">  
 </head>
-<body class="scania ux-lib" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" data-env="Test" ng-controller="UxLib as uxlib">
 
   <c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
