--- a/docs/master-branch/component/examples/Bootstrap/panels.html
+++ b/docs/master-branch/component/examples/Bootstrap/panels.html
@@ -2,6 +2,8 @@
 <html lang="en-GB" class="corporate-ui">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
     <title>Panels</title>
   </head>
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
