--- a/docs/master-branch/component/examples/bootstrap.html
+++ b/docs/master-branch/component/examples/bootstrap.html
@@ -3,6 +3,8 @@
 <html class="corporate-ui">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
   <title>Scania UI Guidelines - Bootstrap</title>
   <meta charset="utf-8">
   <link href="https://static.scania.com/resources/images/compressed/logotypes/favicon.ico" rel="shortcut icon">
