--- a/docs/master-branch/component/examples/starter-kit/new-component/index.html
+++ b/docs/master-branch/component/examples/starter-kit/new-component/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
   <meta charset="utf-8">
 
   <!-- Handling for browsers that are JS disabled -->
