--- a/docs/master-branch/template/basic-template.html
+++ b/docs/master-branch/template/basic-template.html
@@ -2,6 +2,8 @@
 <html lang="en-GB">
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
 	<meta charset="utf-8">
 	<noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
