--- a/docs/master-branch/template/starter-kit/order-box.html
+++ b/docs/master-branch/template/starter-kit/order-box.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
   <meta charset="utf-8">
 
   <!-- Handling for browsers that are JS disabled -->
@@ -31,7 +33,7 @@
   </c-corporate-header>  -->   
   <c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
   </c-corporate-header>
     
   <!-- c-main-content tag should be placed here, it is setting the layout meassures of the page -->     
