--- a/docs/master-branch/component/examples/Bootstrap/table.html
+++ b/docs/master-branch/component/examples/Bootstrap/table.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
   <title>Test page for elements</title>
 
   <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/master/js/corporate-ui.js"></script>
