--- a/docs/master-branch/component/examples/custom-element.html
+++ b/docs/master-branch/component/examples/custom-element.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
 	<title>Flex test page</title>
 	<style>
 		/* Global style */
