--- a/docs/master-branch/component/examples/dealer.html
+++ b/docs/master-branch/component/examples/dealer.html
@@ -2,7 +2,9 @@
 
 <html lang="en-GB" ng-app="CorporateUI">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
     <meta charset="utf-8">
     <noscript>
       <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
