--- a/docs/master-branch/component/index.html
+++ b/docs/master-branch/component/index.html
@@ -3,7 +3,9 @@
 
 <html lang="en-GB" ng-app="CorporateUI">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
   <meta charset="utf-8">
   <noscript>
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
@@ -22,7 +24,7 @@
 
   <c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
   </c-corporate-header>
   
   <c-main-content>
