--- a/docs/master-branch/template/angular-basic-template.html
+++ b/docs/master-branch/template/angular-basic-template.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-GB" ng-app="CorporateUI">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
   <meta charset="utf-8">
   <noscript>
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
