--- a/docs/master-branch/template/de-duping.html
+++ b/docs/master-branch/template/de-duping.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
     <meta charset="utf-8">
     <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
 
@@ -1705,7 +1707,7 @@
 <body  class="scania">
 
     <c-corporate-header project="Corporate UI" site-name="One">
-        <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+        <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
         <nav-item location="#">Log Out</nav-item>
     </c-corporate-header>
 
