--- a/docs/master-branch/template/html-copy-paste/html-copy-paste-shadow-dom.html
+++ b/docs/master-branch/template/html-copy-paste/html-copy-paste-shadow-dom.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+ 
   <meta charset="utf-8">
   <title>UX Library - Copy Paste HTML</title>
 
@@ -37,7 +39,7 @@
 
 <!--   <c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content>
