--- a/docs/master-branch/template/light-examples.html
+++ b/docs/master-branch/template/light-examples.html
@@ -2,6 +2,8 @@
 <html lang="en-GB" class="corporate-ui">
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=”robots” content=”noindex”>
+
   <meta charset="utf-8">
   <noscript>
     <meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html">
@@ -30,7 +32,7 @@
 
   <c-corporate-header site-name="Fleet Management" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
   </c-corporate-header>
 
     <section>
