--- a/docs/master-branch/template/main-hero.htm
+++ b/docs/master-branch/template/main-hero.htm
@@ -20,7 +20,7 @@
 
   <c-corporate-header site-name="Master Branch" site-url="/corporate-ui-docs/master-branch/">
     <nav-item location="/corporate-ui-docs/master-branch/developer/support.html">Support</nav-item>
-    <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
+    <nav-item location="https://github.com/scania/corporate-ui-docs">Master Docs @ GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content class="light">
