--- a/docs/template/angular-basic-template.html
+++ b/docs/template/angular-basic-template.html
@@ -10,7 +10,7 @@
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script> 
   <title>Corporate UI - Angular Basic Template</title>
 
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js?monitoring=true?preload=false"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js?preload=false"></script>
 
 <style>
 
