--- a/docs/template/advanced-tables/responsive-cards/table-reflow-widget.html
+++ b/docs/template/advanced-tables/responsive-cards/table-reflow-widget.html
@@ -30,7 +30,7 @@
 <!-- 	<link rel="stylesheet" href="https://mottie.github.io/tablesorter/css/theme.blue.css"> -->
 	<script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.js"></script>
 	<script src="https://mottie.github.io/tablesorter/js/jquery.tablesorter.widgets.js"></script>
-  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.3.0-CF/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>  
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>  
