Removed files, removed HighCharts and replaced with alerts

--- a/docs/master-branch/template/basic-template-app.html
+++ b/docs/master-branch/template/basic-template-app.html
@@ -86,9 +86,16 @@
 						</div>
 						<div class="panel panel-default"> 
 							<div class="panel-body"> 
-								<c-highcharts type="spline" data="[[0,0],[1,7],[2,1],[3,6],[4,8],[5,6]]" title="Lowered fuel consumption during one week" x-label="Iterations" y-label="Awesomeness Index" height="400px"></c-highcharts>
-
-								<link rel="import" href="https://static.scania.com/build/global/2.5.0/html/component/Data%20Visualization/highcharts/highcharts.html">
+								<h3>Alerts comes in many shapes and forms</h3>
+					                <span class="alert alert-indicator alert-success"></span> Nothing to worry about here<br> 
+					                <span class="alert alert-indicator alert-info"></span> Additional info is available<br> 
+					                <span class="alert alert-indicator alert-warning"></span> You might want to have a closer look at this<br> 
+					                <span class="alert alert-indicator alert-danger"></span> Something bad is going on
+									<div class="callout callout-danger">
+										<h4>Callout Alert</h4>
+										<p>It's very good if we do study the different alternatives when it comes to user communcation.<br>
+										<a href="https://www.nngroup.com/articles/indicators-validations-notifications/">This is what Nielsen Group has to say about it.</a></p>
+									</div>
 							</div>
 						</div>
 					</div>
