--- a/docs/component/index.html
+++ b/docs/component/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://d31jnweo1ynb8u.cloudfront.net/build/global/3.2.1-CF/css/ux-library.css">
   <link rel="stylesheet" href="/corporate-ui-docs/ux-lib.css">  
 </head>
-<body class="scania app ux-lib" ng-controller="UxLib as uxlib">
+<body class="scania ux-lib" ng-controller="UxLib as uxlib">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/support.html">Support</nav-item>
