--- a/docs/developer/temp.css
+++ b/docs/developer/temp.css
@@ -28,7 +28,7 @@
 	}
 
 	i.scania-icon.filter-icon.xs {
-    	background-image: url(https://static.scania.com/development/users/used-vehicles/img/filter.svg);
+    	background-image: url(https://legend.scania.com/development/users/used-vehicles/img/filter.svg);
 	    background-size: 11px;
 	    width: 11px;
 	    height: 11px;
