Removed show-search

--- a/docs/component/examples/bootstrap-pure.html
+++ b/docs/component/examples/bootstrap-pure.html
@@ -15,7 +15,7 @@
   <![endif]-->
   <script src="https://static.scania.com/build/global/3.5.3/js/corporate-ui.js"></script>
 </head>
-<body unresolved class="scania bootstrap app internal">
+<body class="scania bootstrap app internal">
   <div class="row hidden">
     <div class="col-md-6">
       <span class="symbol"></span><div class="portal-heading">Scania UI Guidelines</div>
