--- a/docs/template/advanced-tables/table-column-selector-widget.html
+++ b/docs/template/advanced-tables/table-column-selector-widget.html
@@ -171,7 +171,7 @@
 
 	<c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
         <primary-items>
             <nav-item location="table-basic-template.html">Tables
                 <sub-navigation caption="Standard Tables">
