--- a/docs/template/html-copy-paste/html-copy-paste-page.html
+++ b/docs/template/html-copy-paste/html-copy-paste-page.html
@@ -23,7 +23,7 @@
 
 <xmp class="code-to-copy"> 
  <dont-run-c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </dont-run-c-corporate-header>
 
@@ -45,7 +45,7 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
       </primary-items>
     </dont-run-c-main-navigation>
 
@@ -57,7 +57,7 @@
 <div class="copyable">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
@@ -65,7 +65,7 @@
   <c-main-content>
 
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
@@ -79,7 +79,7 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
       </primary-items>
     </c-main-navigation>
 
