--- a/docs/template/index.html
+++ b/docs/template/index.html
@@ -29,7 +29,7 @@
     </style>
 
 </head>
-<body unresolved class="scania ux-lib documentation">
+<body class="scania ux-lib documentation">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
@@ -39,7 +39,7 @@
 
   <c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>
@@ -49,7 +49,7 @@
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
           </sub-navigation>
         </nav-item>
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>        
