--- a/docs/template/main-hero.htm
+++ b/docs/template/main-hero.htm
@@ -18,16 +18,16 @@
   <link rel="import" href="https://static.scania.com/build/global/2.0.0/html/component/Navigation/main-hero/main-hero.html">
   
 </head>
-<body unresolved class="scania ux-lib">
+<body class="scania ux-lib">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content class="light">
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
       <primary-items>
         <nav-item location="#/">solutions</nav-item>
         <nav-item location="#/branding">products and services</nav-item>
