--- a/docs/template/starter-kit/hello-world/hello-world/demo-page.html
+++ b/docs/template/starter-kit/hello-world/hello-world/demo-page.html
@@ -13,7 +13,7 @@
     <link rel="import" href="hello-world.html">
 
 </head>
-<body unresolved>
+<body >
 
     <!-- Just call the custom element as you would call any other HTML element -->
     <hello-world>
