--- a/docs/component/examples/bootstrap.html
+++ b/docs/component/examples/bootstrap.html
@@ -16,7 +16,7 @@
     <![endif]-->
     <script src="../../../js/corporate-ui.js"></script>
   </head>
-  <body unresolved class="scania bootstrap">
+  <body class="scania bootstrap">
     <div class="row hidden">
       <div class="col-md-6">
         <span class="symbol"></span><div class="portal-heading">Scania UI Guidelines</div>
