--- a/docs/template/advanced-tables/table-basic-template.html
+++ b/docs/template/advanced-tables/table-basic-template.html
@@ -21,7 +21,7 @@
 
 <c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
         <primary-items>
             <nav-item location="table-basic-template.html" class="active">Tables
                 <sub-navigation caption="Standard Tables">
