--- a/docs/template/advanced-tables/table-filtered-app.html
+++ b/docs/template/advanced-tables/table-filtered-app.html
@@ -65,7 +65,7 @@
 
 <c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
         <primary-items>
             <nav-item location="table-basic-template.html">Tables
                 <sub-navigation caption="Standard Tables">
