--- a/docs/template/advanced-tables/table-match-any-column.htm
+++ b/docs/template/advanced-tables/table-match-any-column.htm
@@ -53,7 +53,7 @@
 
 	<c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
         <primary-items>
             <nav-item location="table-basic-template.html">Tables
                 <sub-navigation caption="Standard Tables">
