--- a/docs/template/html-copy-paste/html-copy-paste-shadow-dom.html
+++ b/docs/template/html-copy-paste/html-copy-paste-shadow-dom.html
@@ -36,13 +36,13 @@
 
 
 <!--   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
 
   <c-main-content>
 
-    <c-main-navigation show-search>
+    <c-main-navigation>
       <primary-items>
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>            
@@ -55,7 +55,7 @@
         <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps</nav-item>
             <nav-item location="https://github.com/scania/corporate-ui/issues/new">Report an Issue</nav-item>
             <nav-item location="/corporate-ui-docs/developer/faq.html">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
       </primary-items>
     </c-main-navigation> -->
 
