--- a/docs/template/starter-kit/hello-world/hello-world/hello-world-one-pager.html
+++ b/docs/template/starter-kit/hello-world/hello-world/hello-world-one-pager.html
@@ -9,7 +9,7 @@
     <script src="https://static.scania.com/vendors/frameworks/webcomponentsjs/webcomponents-lite.min.js"></script>
 
 </head>
-<body unresolved>
+<body >
 
     <!-- The new element is created further down the code, now you can just call it as you would call any other HTML element -->
     <hello-world>
