--- a/docs/template/starter-kit/index.html
+++ b/docs/template/starter-kit/index.html
@@ -24,13 +24,13 @@
 
   <!-- In the body you'll applying the brand identity for Scania as well as UX adjustment for either a public web or an internal app. The app appearance are in develpement and might be shakey --> 
 
-<body unresolved class="scania public">
+<body class="scania public">
 
 
   <!-- The header main menu and footer we hope are quite self explainatory :-) --> 
     
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
-        <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
+    <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
     <nav-item location="https://github.com/scania/corporate-ui">GitHub</nav-item>
   </c-corporate-header>
     
