Web application section is in app mode
- Changed to app mode in application
- Removed a lot of files that aren't used

--- a/template/html-copy-paste/html-copy-paste.html
+++ b/template/html-copy-paste/html-copy-paste.html
@@ -14,7 +14,7 @@
 
 </head>
 
-<body class="scania">
+<body class="scania app">
 
   <c-corporate-header site-name="UX Library" site-url="/corporate-ui-docs/">
     <nav-item location="/corporate-ui-docs/developer/contact-us.html">Contact Us</nav-item>
@@ -27,7 +27,7 @@
         <nav-item location="/corporate-ui-docs/">Home</nav-item>
         <nav-item location="/corporate-ui-docs/styleguide/">Style Guide</nav-item>
         <nav-item location="/corporate-ui-docs/developer/" class="active">Web Applications
-          <sub-navigation caption="Scania Bootstrap">
+          <sub-navigation caption="Web Applications">
             <nav-item location="/corporate-ui-docs/developer/">Corporate UI</nav-item>
             <nav-item location="/corporate-ui-docs/developer/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/developer/bootstrap-original-docs.html">Scania Bootstrap</nav-item>
@@ -40,7 +40,7 @@
       </primary-items>
     </c-main-navigation>
 
-    <section class="dark app">
+    <section class="light">
       <link rel="import" href="https://scania.github.io/corporate-ui-docs/template/html-copy-paste/c-html-copy-paste.html">
       <c-html-copy-paste fullbleed></c-html-copy-paste>
     </section>
