Changed name on bootstrap-html-docs to index and moved it

--- a/corporate-ui/components/extended-docs/extended-tables.html
+++ b/corporate-ui/components/extended-docs/extended-tables.html
@@ -58,7 +58,7 @@
         <nav-item location="/corporate-ui-docs/corporate-ui/" class="active">Corporate UI
           <sub-navigation caption="Corporate UI">
             <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Components</nav-item>
+            <nav-item location="/corporate-ui-docs/corporate-ui/components/">Components</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" >HTML copy paste</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
             <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
