--- a/corporate-ui/components/index.html
+++ b/corporate-ui/components/index.html
@@ -9852,6 +9852,6 @@ theAffixInit<span class="token punctuation">.</span><span class="token function"
         }
       }
     </style>
-  <!-- <script src="js/bootstrap-native-docs-scripts.js"></script> -->
+  <script src="js/bootstrap-native-docs-scripts.js"></script>
 </body>
 </html>
