--- a/corporate-ui/components/components-iframe/docs-example-main-navigation.html
+++ b/corporate-ui/components/components-iframe/docs-example-main-navigation.html
@@ -34,7 +34,7 @@
             <sub-navigation caption="Web Applications">
               <nav-item location="/corporate-ui-docs/corporate-ui/">Corporate UI</nav-item>
               <nav-item location="/corporate-ui-docs/corporate-ui/corporate-ui-for-frameworks.html">JS Frameworks</nav-item>
-              <nav-item location="/corporate-ui-docs/corporate-ui/bootstrap-original-docs.html">Scania Bootstrap</nav-item>            
+              <nav-item location="/corporate-ui-docs/corporate-ui/components/">Scania Bootstrap</nav-item>            
               <nav-item location="/corporate-ui-docs/corporate-ui/faq.html">FAQ</nav-item>
         <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
             </sub-navigation>
